Update Blog Articles “2018-08-20-dfsf”

--- a/content/posts/2018-08-20-dfsf.md
+++ b/content/posts/2018-08-20-dfsf.md
@@ -1,5 +1,8 @@
 ---
-title: dfsf
-cover: /media/redux_data_fetching.png
+title: dfsfs
+cover: /img/docker.png
+tags:
+  - doc
+postAuthor: Au
 ---
 
