--- a/content/posts/2018-10-25--.net-in-my-browser.md
+++ b/content/posts/2018-10-25--.net-in-my-browser.md
@@ -8,7 +8,7 @@ postAuthor: Krzysztof Miczkowski
 
 # Introduction
 
-.NET ecosystem has seen some rapid changes in the recent times. With advent of [.NET Core](https://dot.net/core), the official cross-platform implenetation of the runtime (and SDK) Linux and Mac users have gained a way to write and run .NET code in the comfort of their favourite OSes, all supported and ratified by Microsoft. The new and shiny tooling as well as ASP.NET Core's impressive performance (in top 10 of TechEmpower's [Fortunes benchmark](https://www.techempower.com/benchmarks/#section=data-r16&hw=ph&test=fortune)) have overshadowed .NET Core's older x-plat sibling, the Mono runtime. But it is one of Mono's targets that interests us today - namely WebAssembly. Ladies and gentlemen, allow me to introduce...
+.NET ecosystem has seen some rapid changes in the recent times. With advent of [.NET Core](https://dot.net/core), the official cross-platform implementation of the runtime (and SDK) Linux and Mac users have gained a way to write and run .NET code in the comfort of their favourite OSes, all supported and ratified by Microsoft. The new and shiny tooling as well as ASP.NET Core's impressive performance (in top 10 of TechEmpower's [Fortunes benchmark](https://www.techempower.com/benchmarks/#section=data-r16&hw=ph&test=fortune)) have overshadowed .NET Core's older x-plat sibling, the Mono runtime. But it is one of Mono's targets that interests us today - namely WebAssembly. Ladies and gentlemen, allow me to introduce...
 
 # Blazor
 **An experimental .NET web framework using C#/Razor and HTML that runs in the browser via WebAssembly**
