Further fixes on the second read
Adjusted emojis to match the screenshots, removed false promises

--- a/content/posts/2018-10-25--.net-in-my-browser.md
+++ b/content/posts/2018-10-25--.net-in-my-browser.md
@@ -92,7 +92,7 @@ Let's deconstruct the code piece by piece.
 
 `<p>Current count: @currentCount</p>` is where the interesting stuff begins. The `@currentCount` is a reference to the field defined in the `@functions` block below and will cause the current value in the variable to be rendered there.
 
-`<button class="btn btn-primary" onclick="@IncrementCount">Click me</button>` is where we see the onclick event handler which is also a reference to the `IncrementCount()` method below. More on event handling later.
+`<button class="btn btn-primary" onclick="@IncrementCount">Click me</button>` is where we see the onclick event handler which is also a reference to the `IncrementCount()` method below.
 
 Finally, there's the `@functions` block where we define our variables, parameters, functions, etc.
 
@@ -160,7 +160,7 @@ As most frameworks do, Blazor allows components to use layouts to reduce code re
 * Inherit from `BlazorLayoutComponent`.
 * Render the body using `@Body` somewhere in the layout's markup.
 
-In _Pages_ folder there's a file called __ViewImports.cshtml_ which is a reserved name meaning something along the lines of "add the content of this file to all page components that are siblings of this file or in child folders". Inside, there's one line `@layout MainLayout` that controls which component is to be used as the layout. Each component can override this by using the same syntax or refuse the layout at all by using `@layout null`.
+In _Pages_ folder there's a file called __ViewImports.cshtml_ which is a reserved name meaning something along the lines of "add the content of this file to all page components that are siblings of this file or in child folders". Inside, there's one line `@layout MainLayout` that controls which component is to be used as the layout. Each page can override this by using the same syntax or refuse the layout at all by using `@layout null`.
 
 ### Regular components
 
@@ -185,13 +185,13 @@ In _Counter.cshtml_ let's change
 
 to
 
-`<CoolCounter Count="CurrentCount">😎</CoolCounter>`
+`<CoolCounter Count="CurrentCount">😎😎</CoolCounter>`
 
 After reloading the counter page you should see something like this:
 
 ![A cooler counter](../../static/img/blazor/2.png)
 
-Let's dissect the code. Using components is as simple as writing a tag with its name, `CoolComponent` being the case here. The `ChildContent` property is a reserved name for, as the name suggests, child content that you can put in the component. In the example above our child content is a smiling face with sunglasses emoji rendered twice with `@ChildContent` to ensure maximum coolness.
+Let's dissect the code. Using components is as simple as writing a tag with its name, `CoolComponent` being the case here. The `ChildContent` property is a reserved name for, as the name suggests, child content that you can put in the component. In the example above our child content are two smiling faces with sunglasses emojis rendered twice with `@ChildContent` to ensure maximum coolness.
 
 A familiar `[Parameter]` attribute has made a reappearance but means something different for a non-page component. We can use it to pass parameters in the markup, `Count="CurrentCount"` being the syntax in the tag here. What other things can be passed as parameters? Sky is the limit. Say that we want to add some extensibility to the `CoolComponent` and have it somehow react to click event. Easy peasy, just add the following line in the `@functions` block:
 
@@ -203,11 +203,11 @@ and also add the `onclick` handler to the div element:
 
 Finally, we need to pass some action as a parameter where we invoke our component:
 
-`<CoolCounter Count="CurrentCount" Click="() => CurrentCount = 0">😎</CoolCounter>`
+`<CoolCounter Count="CurrentCount" Click="() => CurrentCount = 0">😎😎</CoolCounter>`
 
 This handler could, of course, be extracted to a separate method but inline lambda expressions are acceptable as well. So let's reload the counter page, increment it a bit, click the component and... Nothing. That's because the action wasn't directly called in a DOM event handler. We need to give the framework a small nudge. Let's change our component invocation a bit:
 
-`<CoolCounter Count="CurrentCount" Click="() => { CurrentCount = 0; StateHasChanged(); }">😎</CoolCounter>`
+`<CoolCounter Count="CurrentCount" Click="() => { CurrentCount = 0; StateHasChanged(); }">😎😎</CoolCounter>`
 
 By calling the `StateHasChanged()` method we inform Blazor that something has happened outside the area it keeps under watch and that the document tree needs to be updated. The example also shows the point at which we could start seriously considering dropping the lambda in favour of a separate method.
 
