--- a/content/posts/2018-10-25_.net-in-my-browser.md
+++ b/content/posts/2018-10-25_.net-in-my-browser.md
@@ -46,7 +46,7 @@ I mention full debugger support for server-side Blazor - that's because for the 
 
 Let's create a new _standalone_ project. Once that's done, you can launch it by either using `ctrl + F5` in Visual Studio or `dotnet run` CLI command. Either way, you will know all went well if the following appears in your browser:
 
-![Your first Blazor app](/img/blazo_/1.png)
+![Your first Blazor app](/img/blazor_1.png)
 
 Should the app fail to run, it is worth checking if there are conflicting .NET Core runtime versions. Uninstalling the old ones should help.
 
